[gd_scene load_steps=3 format=3 uid="uid://c3mfp0rvpfpdn"]

[ext_resource type="Texture2D" uid="uid://m01chsswga2i" path="res://assets/menu/backgrounds/temp_menuscreen_background.png" id="1_akewv"]
[ext_resource type="Script" path="res://src/main/credits_menu_script.gd" id="1_k3uar"]

[node name="CreditsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k3uar")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_akewv")

[node name="CreditsMenuMargin" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(15, 15)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="CreditsTitleBox" type="VBoxContainer" parent="CreditsMenuMargin"]
layout_mode = 2
theme_override_constants/separation = 75

[node name="CreditsTitleText" type="Label" parent="CreditsMenuMargin/CreditsTitleBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 71
text = "Credits"
horizontal_alignment = 1

[node name="TextEdit" type="TextEdit" parent="CreditsMenuMargin/CreditsTitleBox"]
layout_direction = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "SALKDJASLKDjASLKDJALKSDJLKASJDLKJASJDALSKJDLASjdlaSD"
placeholder_text = "ASDLKJALDSKJAKLDJAjdl"
editable = false

[node name="QuitButton" type="Button" parent="CreditsMenuMargin/CreditsTitleBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 40
text = "Exit
"
